Removed reference to deprecated WriteConcern